# python-template-oss

./: .gitignore  README.md  cookiecutter.json  mkdocs.yml  requirements-docs.txt  setup.cfg  tasks.py  test.sh
.github/workflows/: ci.yml  pages.yml
docs/: index.md
hooks/: post_gen_project.py  pre_gen_project.py
scripts/: install.py
tests/: test_project_generation.py
tests/e2e/: conftest.py  test_project_generation.py  utils.py
{{ cookiecutter.repo_name }}/: Dockerfile  Dockerfile.cross-platform  README.md  mkdocs.yml  pyproject.poetry.toml  pyproject.setuptools.toml  pyproject.toml  setup.cfg  sonar-project.properties  tasks.py
{{ cookiecutter.repo_name }}/.azuredevops/pipelines/: cd.yml  ci.yml  semantic_release.yml
{{ cookiecutter.repo_name }}/.github/workflows/: cd.yml  ci.yml  docker.yml  semantic_release.yml  semantic_release_candidate.yml
{{ cookiecutter.repo_name }}/docs/: index.md
{{ cookiecutter.repo_name }}/docs/_scripts/: gen_ref_pages.py
{{ cookiecutter.repo_name }}/scripts/: README.md  install.poetry.py  install.py  install.setuptools.py  release.py  version.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.project_import}}/: __about__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.project_slug}}/: __about__.py  __main__.py
{{ cookiecutter.repo_name }}/src/{{ cookiecutter.project_slug}}/cli/: __index__.py  app.argparse.py  app.click.py  app.typer.py
{{ cookiecutter.repo_name }}/tests/: test_cli.py  test_version.py
